test/data/resolver/valid/with_carry_transitive.cypher
MATCH (a:Person) WITH a WITH a RETURN a.name
