test/data/resolver/invalid/union_unknown_label_branch.cypher
MATCH (a:Person) RETURN a.name UNION MATCH (b:NotDeclared) RETURN b.name
